fix: shift works exactly as it supposed to work

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -178,6 +178,12 @@ body {
           }
         }
 
+        //  fix Digit6 & Digit7 font
+        &:nth-child(7),
+        &:nth-child(8), {
+          font-family: sans-serif;
+        }
+
         // 12 & 18 - minus & numpad minus
         &:nth-child(12) {
           position: relative;
